--- a/index.html
+++ b/index.html
@@ -559,76 +559,79 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="first">
-          <a href="#"
-            ><span class="web">WEB</span><span class="studio2">STUDIO</span>
-          </a>
-          <p>
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
+        <div class="footer-row">
+          <div class="first">
+            <a href="#"
+              ><span class="web">WEB</span><span class="studio2">STUDIO</span>
+            </a>
+            <p>
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
+          <div class="second">
+            <p>Social Media</p>
+            <ul class="social-links">
+              <div class="footer-links">
+                <li>
+                  <a
+                    href="https://www.instagram.com/"
+                    target="_blank"
+                    class="link"
+                  >
+                    <svg class="icon" width="16" height="16">
+                      <use xlink:href="images/icons.svg#icon-instagram-2"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://x.com/" target="_blank" class="link">
+                    <svg class="icon" width="16" height="16">
+                      <use xlink:href="images/icons.svg#icon-twitter-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.linkedin.com/"
+                    target="_blank"
+                    class="link"
+                  >
+                    <svg class="icon" width="16" height="16">
+                      <use xlink:href="images/icons.svg#icon-linkedin-1"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    href="https://www.facebook.com/"
+                    target="_blank"
+                    class="link"
+                  >
+                    <svg class="icon" width="16" height="16">
+                      <use xlink:href="images/icons.svg#icon-facebook-1"></use>
+                    </svg>
+                  </a>
+                </li>
+              </div>
+            </ul>
+          </div>
         </div>
-        <div class="second">
-          <p>Social Media</p>
-          <ul class="social-links">
-            <div class="footer-links">
-              <li>
-                <a
-                  href="https://www.instagram.com/"
-                  target="_blank"
-                  class="link"
-                >
-                  <svg class="icon" width="16" height="16">
-                    <use xlink:href="images/icons.svg#icon-instagram-2"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a href="https://x.com/" target="_blank" class="link">
-                  <svg class="icon" width="16" height="16">
-                    <use xlink:href="images/icons.svg#icon-twitter-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://www.linkedin.com/"
-                  target="_blank"
-                  class="link"
-                >
-                  <svg class="icon" width="16" height="16">
-                    <use xlink:href="images/icons.svg#icon-linkedin-1"></use>
-                  </svg>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="https://www.facebook.com/"
-                  target="_blank"
-                  class="link"
-                >
-                  <svg class="icon" width="16" height="16">
-                    <use xlink:href="images/icons.svg#icon-facebook-1"></use>
-                  </svg>
-                </a>
-              </li>
-            </div>
-          </ul>
-        </div>
-
-        <div class="third">
-          <label class="footer-label">
-            Subscribe
-            <input type="email" class="footer-input" placeholder="E-mail" />
-          </label>
-        </div>
-        <div class="fourth">
-          <a href="#modal" class="open-btn"
-            >Subscribe
-            <svg class="icon" width="16" height="16">
-              <use xlink:href="images/icons.svg#icon-Frame-3"></use>
-            </svg>
-          </a>
+        <div class="footer-row-bottom">
+          <div class="third">
+            <label class="footer-label">
+              Subscribe
+              <input type="email" class="footer-input" placeholder="E-mail" />
+            </label>
+          </div>
+          <div class="fourth">
+            <a href="#modal" class="open-btn"
+              >Subscribe
+              <svg class="icon" width="16" height="16">
+                <use xlink:href="images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </a>
+          </div>
         </div>
         <div id="modal" class="modal">
           <div class="modal-content">
