--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer-row">
+        <div class="footer-row" id="footer-row">
           <div class="first">
             <a href="#"
               ><span class="web">WEB</span><span class="studio2">STUDIO</span>
@@ -617,7 +617,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer-row-bottom">
+        <div class="footer-row-bottom" id="footer-row-bottom">
           <div class="third">
             <label class="footer-label">
               Subscribe
