--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
               <a href="/">
                 <img
                   src="./images/mark-guerrero.jpg"
+                  srcset="
+                    ./images/mark-guerrero.jpg    1x,
+                    ./images/mark-guerrero@2x.jpg 2x
+                  "
                   width="264"
                   height="260"
                   alt="Mark Guerrero photo"
@@ -239,6 +243,7 @@
               <a href="/">
                 <img
                   src="./images/tom-ford.jpg"
+                  srcset="./images/tom-ford.jpg 1x, ./images/tom-ford@2x.jpg 2x"
                   width="264"
                   height="260"
                   alt="Tom Ford photo"
@@ -301,6 +306,10 @@
               <a href="/">
                 <img
                   src="./images/camila-garcia.jpg"
+                  srcset="
+                    ./images/camila-garcia.jpg    1x,
+                    ./images/camila-garcia@2x.jpg 2x
+                  "
                   width="264"
                   height="260"
                   alt="Camila Garcia photo"
@@ -363,6 +372,10 @@
               <a href="/">
                 <img
                   src="./images/daniel-wilson.jpg"
+                  srcset="
+                    ./images/daniel-wilson.jpg    1x,
+                    ./images/daniel-wilson@2x.jpg 2x
+                  "
                   width="264"
                   height="260"
                   alt="Daniel Wilson photo"
@@ -434,6 +447,7 @@
                 <a href="/">
                   <img
                     src="./images/img-1.jpg"
+                    srcset="./images/img-1.jpg 1x, ./images/img-1@2x.jpg 2x"
                     width="360"
                     height="300"
                     alt="banking app"
@@ -453,6 +467,7 @@
                 <a href="/">
                   <img
                     src="./images/img-2.jpg"
+                    srcset="./images/img-2.jpg 1x, ./images/img-2@2x.jpg 2x"
                     width="360"
                     height="300"
                     alt="cashless payment"
@@ -472,6 +487,7 @@
                 <a href="/">
                   <img
                     src="./images/img-3.jpg"
+                    srcset="./images/img-3.jpg 1x, ./images/img-3@2x.jpg 2x"
                     width="360"
                     height="300"
                     alt="meditation app"
@@ -493,6 +509,7 @@
                 <a href="/">
                   <img
                     src="./images/img-4.jpg"
+                    srcset="./images/img-4.jpg 1x, ./images/img-4@2x.jpg 2x"
                     width="360"
                     height="300"
                     alt="taxi photo"
@@ -514,6 +531,7 @@
                 <a href="/">
                   <img
                     src="./images/img-5.jpg"
+                    srcset="./images/img-5.jpg 1x, ./images/img-5@2x.jpg 2x"
                     width="360"
                     height="300"
                     alt="phone screen"
@@ -535,6 +553,7 @@
                 <a href="/">
                   <img
                     src="./images/img-6.jpg"
+                    srcset="./images/img-6.jpg 1x, ./images/img-6@2x.jpg 2x"
                     width="360"
                     height="300"
                     alt="woman with orange sweater"
